<?xml version="1.0" encoding="utf-8"?>
<!--
    login 登录页面
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorGray"
                android:orientation="vertical">

    <!--Main Content-->
    <LinearLayout
        android:id="@+id/login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">
        <!--Logo-->

        <!--Login Username-->
        <LinearLayout
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_username"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="5"
                android:editable="false"
                android:ellipsize="middle"
                android:hint="请输入用户名或手机号"
                android:singleLine="true"/>
        </LinearLayout>

        <!--Login Password-->
        <LinearLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_password"
                android:textSize="17sp"/>

            <EditText
                android:password="true"
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="5"
                android:editable="false"
                android:ellipsize="middle"
                android:hint="请输入密码"
                android:singleLine="true"/>
        </LinearLayout>

        <!--Login AutoLogin-->
        <LinearLayout
            android:id="@+id/login_auto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="0dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_auto"
                android:textSize="17sp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="@string/login_submit"
            android:textSize="20sp"/>

        <!--Login Support-->
        <LinearLayout
            android:id="@+id/login_support"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/login_register"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:text="@string/login_forget"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>