<?xml version="1.0" encoding="utf-8"?>
<!--
    userinfo_fragment 用户信息界面
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/userinfo_fragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGray"
              android:orientation="vertical">
    <!--账户信息 Begin-->
    <LinearLayout
        android:id="@+id/ll_userinfo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="10sp">

        <TextView
            android:id="@+id/tv_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_face_black_70dp"
            android:text="@string/tv_userinfo"
            android:textSize="20sp"/>
    </LinearLayout>
    <!--账户信息 End-->

    <!--家长 Begin-->
    <LinearLayout
        android:id="@+id/ll_addparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:text="@string/tv_addparent"
            android:textSize="20sp"/>
    </LinearLayout>
    <!--家长 End-->

    <!--孩子 Begin-->
    <LinearLayout
        android:id="@+id/ll_addchild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:text="@string/tv_addchild"
            android:textSize="20sp"/>
    </LinearLayout>
    <!--孩子 End-->
</LinearLayout>